# todo-client

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  todo_client.core.rst  todo_client.rst
src/todo_client/: cli.py  example.py
src/todo_client/core/: constants.py  helpers.py  logging_config.py  repl.py  tasks.py
tests/: test_example.py  test_index.py
